--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^0.13.2",
     "serve-favicon": "^2.2.0",
     "showdown": "^0.5.0",
+    "socket.io": "^1.3.5",
     "twitter": "^1.2.5"
   }
 }
