--- a/package.json
+++ b/package.json
@@ -27,15 +27,21 @@
     "dotenv": "^1.1.0",
     "express": "^4.12.3",
     "fluxxor": "^1.5.3",
+    "fs": "0.0.2",
+    "https": "^1.0.0",
     "jade": "^1.9.2",
     "materialize-css": "^0.96.1",
     "mongodb": "^1.4.35",
     "mongoskin": "^1.4.13",
     "morgan": "^1.5.2",
+    "ntwitter": "^0.5.0",
+    "oauth": "^0.9.13",
+    "openssl": "^0.1.0",
     "react": "^0.13.2",
     "serve-favicon": "^2.2.0",
     "showdown": "^0.5.0",
     "socket.io": "^1.3.5",
+    "twit": "^1.1.20",
     "twitter": "^1.2.5"
   }
 }
